Added to the project: - openjdk 11 slim to create the Docker image; - Spring Retry to run with Docker Compose.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
           uri: https://github.com/eduardomelle/config-server
           clone-on-start: true
           default-label: main
+      fail-fast: true
+      retry:
+        initial-interval: 1500
+        multiplier: 1.5
+        max-attempts: 10000
+        max-interval: 2000
 
 eureka:
   client:
